# bec

./: .gitignore  log.txt  pyproject.toml  start.sh  stop.sh
recaps/: 1+Mission inn El Campeón.md  2+Fall River Country Club.md  3+My Journey in Junior Golf Brian Li.md  4+New York State Invitational Jayden Wu.md  5+New England State Invitational Jayden Wu.md  Fall River Country Club.md  Mission inn El Campeón.md  My Journey in Junior Golf Brian Li.md
src/: main.py
static/css/: bgi.css
views/: FOOTER.tpl  NAVBAR.tpl  about-bak.tpl  about.tpl  article_list.tpl  course_recap.tpl  course_recapv2.tpl  events-bak.tpl  events.tpl  gallery-bak.tpl  gallery.tpl  index-bak.tpl  index.tpl  specificarticle.tpl
